testsuite/gtk/ui/test6.expected
ERROR: gtk-builder-error-quark 8
Duplicate object ID 'foo' on line 5 (previously on line 3)
