testsuite/gtk/ui/test6.ui
<interface>
  <object class="GtkBox" id="foo">
  </object>
  <object class="GtkBox" id="foo">
  </object>
</interface>
